:jigsaw: components created hamburger, titles, menu, social, postlis, home, hero and other all ready to inspect

--- a/src/Service/Home/Hero.astro
+++ b/src/Service/Home/Hero.astro
@@ -1,6 +1,6 @@
 ---
-import NavBar from "./NavBar.astro";
-import Social from "./Social.astro";
+import NavBar from "./Components/Hero/NavBar.astro";
+import Social from "./Components/Hero/Social.astro";
 ---
 
 <NavBar />
@@ -14,7 +14,7 @@ import Social from "./Social.astro";
 </div>
 <Social />
 
-<style>
+<!-- <style>
 	.hero::before 
 	{
 		content: "";
@@ -30,4 +30,4 @@ import Social from "./Social.astro";
 		background-repeat: no-repeat;
 		background-position: center;
 	}
-</style>
+</style> -->
