--- a/src/layouts/HomeLayout.astro
+++ b/src/layouts/HomeLayout.astro
@@ -4,7 +4,7 @@ const pageTitle = Astro.props.pageTitle;
 ---
 
 <!DOCTYPE html>
-<html lang="id">
+<html lang="id" class="dark:bg-primary dark:text-white">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
