--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -5,6 +5,11 @@
 	font-family: "Mulish", sans-serif;
 }
 
+body{
+	margin: 0 !important;
+	padding: 0 !important;
+}
+
 .tm {
 	-webkit-transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
 	transition: all 700ms cubic-bezier(0.77, 0, 0.175, 1);
@@ -71,3 +76,15 @@ a{
 	background: #6e6e6e;
 }
 
+.strkd {
+	/* text-shadow: -1px -1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, 1px 1px 0 #fff; */
+	color: #212331 !important;
+	text-shadow: rgb(255, 255, 255) 1px 0px 0px, rgb(255, 255, 255) 0.540302px 0.841471px 0px,
+		rgb(255, 255, 255) -0.416147px 0.909297px 0px,
+		rgb(255, 255, 255) -0.989992px 0.14112px 0px,
+		rgb(255, 255, 255) -0.653644px -0.756802px 0px,
+		rgb(255, 255, 255) 0.283662px -0.958924px 0px,
+		rgb(255, 255, 255) 0.96017px -0.279415px 0px !important;
+	/* -webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: white; */
+}
