:building_construction: Building the rocket

--- a/src/Service/Home/Components/Projects/Description.astro
+++ b/src/Service/Home/Components/Projects/Description.astro
@@ -3,12 +3,15 @@
 
 <div class="w-full text-center items-center flex flex-col">
 	<h3 class="text-5xl font-extrabold">
-		Spreading
-		<span class="strkd">The Joy</span>
+		A
+		<span class="strkd">Bright</span>
+		and
+		<span class="strkd">Happy</span>
+		Project
 	</h3>
-	<p class="mb-5 max-w-3xl mt-10 mt-2 dark:text-gray-200 font-extralight">
-		In my free time, I love sharing my knowledge about programming through writing posts. I
-		wanna helps others understand how fun and inspiring coding can be, and also allows me to
-		improve my own skills.
+	<p class="mb-5 max-w-3xl mt-10 dark:text-gray-200 font-extralight">
+		Get a glimpse into my world of programming and see the dedication and hard work that has
+		gone into my project. From the initial concept to the final product, I have poured my heart
+		and soul into creating something truly special
 	</p>
 </div>
