--- a/src/Service/Home/Components/Titles.astro
+++ b/src/Service/Home/Components/Titles.astro
@@ -5,7 +5,7 @@
 	<p class="max-w-sm dark:text-gray-200 font-extralight text-right">
 		I am <span class="font-bold">Andika Nur Pratama</span> a student with a boundless passion for
 		programming, I am constantly amazed by the power of programming and the incredible things that
-		can be built with just a lines of code.
+		can be built with just lines of code.
 	</p>
 	<div class="h-36 w-[2px] bg-gray-900 dark:bg-gray-100 opacity-50">&nbsp;</div>
 	<div class="max-w-sm w-96">
