--- a/src/Service/Home/Home.astro
+++ b/src/Service/Home/Home.astro
@@ -1,6 +1,7 @@
 ---
 import Hero from "./Hero.astro";
 import HomeBlog from "./HomeBlog.astro";
+import Projects from "./Projects.astro";
 import Skills from "./Skills.astro";
 
 ---
@@ -8,5 +9,6 @@ import Skills from "./Skills.astro";
 <div class="bg-primary text-white">
     <Hero />
     <Skills />
-    <HomeBlog />
+    <Projects />
+    <!-- <HomeBlog /> -->
 </div>
