--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Home from '../features/home/Home.astro'
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Itsu me Anka!">
 	<main>
 		<Home />
 	</main>
