--- a/src/features/home/Home.astro
+++ b/src/features/home/Home.astro
@@ -1,12 +1,11 @@
 ---
 import Hero from "./components/Hero.astro";
 import Alert from "../../components/Alert.astro";
+import Header from "./components/Header.astro"
 ---
 
 <div class="w-full min-h-screen">
-	<Alert
-		title={"Howdy buddy"}
-		text={"This page is a work in progress. thanks for checking it out!"}
-	/>
+	<Header />
+	<!-- <Alert /> -->
 	<Hero />
 </div>
