--- a/src/features/home/components/SelectBox.astro
+++ b/src/features/home/components/SelectBox.astro
@@ -7,10 +7,10 @@ export interface Props {
 const {className} = Astro.props;
 ---
 
-<div class={`relative border-2 border-blue-400 ${className}`}>
+<div class={`relative border-2 border-blue-500 ${className}`}>
     <slot />
-	<div class={`absolute w-2 lg:w-3 h-2 lg:h-3 bg-white border-2 border-blue-600 -top-1 lg:-top-2 -left-1 lg:-left-2`}></div>
-	<div class={`absolute w-2 lg:w-3 h-2 lg:h-3 bg-white border-2 border-blue-600  -top-1 lg:-top-2 -right-1 lg:-right-2`}></div>
-	<div class={`absolute w-2 lg:w-3 h-2 lg:h-3 bg-white border-2 border-blue-600  -bottom-1 lg:-bottom-2 -left-1 lg:-left-2`}></div>
-	<div class={`absolute w-2 lg:w-3 h-2 lg:h-3 bg-white border-2 border-blue-600  -bottom-1 lg:-bottom-2 -right-1 lg:-right-2`}></div>
+	<div class={`absolute w-2  h-2 bg-blue-500 -top-1     -left-1`}></div>
+	<div class={`absolute w-2  h-2 bg-blue-500 -top-1     -right-1`}></div>
+	<div class={`absolute w-2  h-2 bg-blue-500 -bottom-1  -left-1`}></div>
+	<div class={`absolute w-2  h-2 bg-blue-500 -bottom-1  -right-1`}></div>
 </div>
