--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
-import Layout from '@/layouts/Layout.astro';
-import Header from '@/components/Header.astro';
-import Homepage from '@/services/Home/Homepage.astro';
+import Layout from "@/layouts/BaseLayout.astro";
+import Home from "@/features/home/index.astro";
 ---
 
-<Layout title="Itsu me Anka!">
-	<Header />
-	<Homepage />
+<Layout title="Andka">
+    <Home />
 </Layout>
