--- a/src/features/home/components/Hero.astro
+++ b/src/features/home/components/Hero.astro
@@ -2,17 +2,17 @@
 
 ---
 
-<div class="relative flex items-center justify-center p-14 w-full h-full flex-col gap-10 box-border">
-    <h1 class="text-6xl font-bold">HI' There👋</h1>
-    <main class="text-center">
+<div class=":uno: relative flex items-center justify-center p-14 w-full h-full flex-col gap-10 box-border">
+    <h1 class=":uno: text-4xl md-text-6xl font-bold">HI' There👋</h1>
+    <main class=":uno: text-center">
         <p>
-            This site is is under construction.👷🏗️
+      i'm working in this website, so please be patient.🙏
         </p>
         <p>
-            if you want to contact me, please use the links below.👇
+            if you want to contact me, please use the button below.👇
         </p>
     </main>
-    <a href="mailto:andikacahargen2@gmail.com" role="button" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+    <a href="mailto:andikacahargen2@gmail.com" role="button" class=":uno: bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-500 hover:-translate-y-1">
             Email Me 📧
     </a>
 </div>
