--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <BaseHead title={title} />
   </head>
-  <body class="bg-primary text-white h-screen font-sans">
+  <body class="bg-primary h-screen font-sans">
     <!-- <BaseNavbar /> -->
     <slot />
     <!-- <Footer /> -->
