--- a/src/features/home/components/Hero.astro
+++ b/src/features/home/components/Hero.astro
@@ -1,18 +1,24 @@
 ---
-
 ---
 
-<div class=":uno: relative flex items-center justify-center p-14 w-full h-full flex-col gap-10 box-border">
-    <h1 class=":uno: text-4xl md-text-6xl font-bold">HI' There👋</h1>
-    <main class=":uno: text-center">
-        <p>
-      i'm working in this website, so please be patient.🙏
-        </p>
-        <p>
-            if you want to contact me, please use the button below.👇
-        </p>
-    </main>
-    <a href="mailto:andikacahargen2@gmail.com" role="button" class=":uno: bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded transition duration-500 hover:-translate-y-1">
-            Email Me 📧
-    </a>
+<div class="relative flex p-14 w-full h-full gap-10 bg-primary text-white items-center max-w-screen-2xl m-auto">
+	<div class="max-w-xl flex flex-col gap-y-8">
+		<h1 class="leadin text-6xl tracking-wide leading-tight font-black">Self Taught Web Developer</h1>
+		<p class="max-w-md leading-8">
+			Building the internet, resolving problems, developing rich user experiences and seamless experiences, and learning new things is what I
+			do.
+		</p>
+		<a href="#about" class="group">
+			<button class="bg-green-400 text-primary font-bold py-2 px-4 rounded-xl transition-all duration-500 ease-in-out hover:shadow-d shadow-green">
+				About Me <span class="i-charm:chevron-right from-green group-hover:rotate-90deg transition-all duration-500 ease-in-out"></span>
+			</button>
+		</a>
+
+        <div class="absolute right-1/4 bottom-4rem flex rotate-14deg">
+            <div class="border-4rem border-transparent border-r-green-400"> </div>
+            <div class="border-4rem border-transparent border-l-green-500"> </div>
+        </div>
+
+        <div class="absolute w-full top-1/3 -right-3/5 opacity-25 h-200px bg-dotted from-gray-300"></div>
+	</div>
 </div>
