--- a/src/features/home/index.astro
+++ b/src/features/home/index.astro
@@ -1,7 +1,14 @@
 ---
 import Hero from "./components/Hero.astro";
+import About from "./components/About.astro";
+import Skills from "./components/Skills.astro";
+
 ---
 
 <div class="relative w-full h-screen overflow-hidden">
-    <Hero />
+	<Hero />
+	<About />
+	<Skills />
 </div>
+<script is:inline>
+</script>
