--- a/src/features/home/components/Hero.astro
+++ b/src/features/home/components/Hero.astro
@@ -1,8 +1,8 @@
 ---
 ---
 
-<section class="relative flex p-14 w-full h-full gap-10 bg-primary text-gray-300 items-center max-w-screen-2xl m-auto">
-	<div class="max-w-xl flex flex-col gap-y-8">
+<section id="hero" class="relative flex p-14 w-full h-screen gap-10 bg-primary text-gray-300 items-center max-w-screen-2xl m-auto">
+	<div class="max-w-xl flex flex-col gap-y-8" data-animation="up" data-delay="0">
 		<h1 class="leadin text-6xl tracking-wide leading-tight font-black">Self Taught Web Developer</h1>
 		<p class="max-w-md leading-8">
 			Building the internet, resolving problems, developing rich user experiences and seamless experiences, and learning new things is what I
@@ -15,7 +15,7 @@
 			</button>
 		</a>
 
-		<div class="absolute right-1/4 bottom-4rem flex rotate-14deg">
+		<div data-animation="up" data-delay="300" class="absolute right-1/4 bottom-4rem flex rotate-14deg">
 			<div class="border-4rem border-transparent border-r-green-400"></div>
 			<div class="border-4rem border-transparent border-l-green-500"></div>
 		</div>
