--- a/src/features/home/components/Skills.astro
+++ b/src/features/home/components/Skills.astro
@@ -14,7 +14,9 @@ const techStack = [
 ];
 ---
 
-<section class="relative flex items-center justify-center p-14 w-full h-full gap-10 bg-primary text-gray-300 items-center max-w-screen-2xl m-auto">
+<section
+	id="skills"
+	class="relative flex items-center justify-center p-14 w-full h-screen gap-10 bg-primary text-gray-300 items-center max-w-screen-2xl m-auto">
 	<div class="flex flex-col gap-y-8 text-center justify-center items-center">
 		<h1 class="leadin text-6xl tracking-wide leading-tight font-black">Things I do</h1>
 		<div class="flex flex-col gap-3">
@@ -22,7 +24,9 @@ const techStack = [
 				While my primary playground is web development, my curiosity knows no bounds. <span class="text-red">Beyond coding</span>, I thrive on
 				embracing fresh horizons and tackling exciting challenges. Learning is my compass, and I'm forever charting new territories.
 			</p>
-			<p class="leading-8 max-w-4xl">Here are some of the things I do, and some of the things I'm <span class="text-green">learning</span>.</p>
+			<p class="leading-8 max-w-4xl">
+				Here are some of the things I do, and some of the things I'm <span class="text-green">learning</span>.
+			</p>
 		</div>
 
 		<div class="text-7xl my-8 flex max-w-3xl items-center justify-center grayscale brightness-200% gap-10 gap-y-12 flex-wrap color-inherit">
@@ -42,6 +46,5 @@ const techStack = [
 		</div>
 
 		<div class="absolute w-300px top-0 left-0 opacity-15 h-screen bg-dotted from-gray-300"></div>
-
 	</div>
 </section>
