--- a/src/features/home/components/Hero.astro
+++ b/src/features/home/components/Hero.astro
@@ -15,7 +15,7 @@
 			</button>
 		</a>
 
-		<div data-animation="up" data-delay="300" class="absolute right-1/4 bottom-4rem flex rotate-14deg">
+		<div data-move="down up" style="--duration: 400ms" data-delay="300" class="will-move absolute right-1/4 bottom-4rem flex rotate-14deg">
 			<div class="border-4rem border-transparent border-r-green-400"></div>
 			<div class="border-4rem border-transparent border-l-green-500"></div>
 		</div>
