--- a/src/features/home/components/Skills.astro
+++ b/src/features/home/components/Skills.astro
@@ -40,7 +40,7 @@ const techStack = [
 			}
 		</div>
 
-		<div class="absolute right-0 top-2/6 flex rotate-14deg">
+		<div data-delay="200" data-move="down up" style="--duration:500ms" class="absolute will-move right-0 top-2/6 flex rotate-14deg">
 			<div class="border-1.5rem border-transparent border-r-green-400"></div>
 			<div class="border-1.5rem border-transparent border-l-green-500"></div>
 		</div>
