--- a/src/features/home/components/About.astro
+++ b/src/features/home/components/About.astro
@@ -2,41 +2,47 @@
 ---
 
 <section id="about" class="relative flex p-14 w-full h-screen gap-10 text-gray-300 items-center justify-center max-w-screen-2xl m-auto">
-	<div class="grid grid-cols-2">
+	<div class="grid grid-cols-1 gap-y-8 xl:grid-cols-2">
 		<div class="flex flex-col gap-y-4 cursor-default">
-			<h1 class="leadin text-5xl tracking-wide leading-tight font-black">
+			<h1 class="leadin text-4xl lg:text-5xl tracking-wide leading-tight font-black">
 				<span class="hover:(text-green) transition-all duration-500 ease-in-out">Andika</span> is here!
 			</h1>
-			<p class="max-w-md leading-8 text-gray">
-				<span class="hover:text-green transition-all duration-500 ease-in-out">Web Developer</span> / <span
-					class="hover:text-yellow transition-all duration-500 ease-in-out">JS Enthusiast</span
-				> / <span class="hover:text-pink transition-all duration-500 ease-in-out">Weeb</span>
+			<p class="max-w-md leading-8 text-gray relative">
+				<span class="x-subs inline-block">Web Developer</span>
+				<span class="x-subs inline-block">/</span>
+				<span class="x-subs inline-block">JS Enthusiast</span>
+				<span class="x-subs inline-block">/</span>
+				<span class="x-subs inline-block">Weeb</span>
 			</p>
 
-			<div class="absolute left-2rem top-1/5 flex rotate-98deg">
+			<div class="absolute left-2rem top-2em md:top-1/5 flex rotate-98deg -z-50">
 				<div class="border-2rem border-transparent border-r-green-400"></div>
 				<div class="border-2rem border-transparent border-l-green-500"></div>
 			</div>
 
-			<div class="absolute right-2rem bottom-1/5 flex rotate-14deg">
+			<div class="absolute right-2rem bottom-1/5 flex rotate-14deg -z-50">
 				<div class="border-1rem border-transparent border-r-green-400"></div>
 				<div class="border-1rem border-transparent border-l-green-500"></div>
 			</div>
 
-			<div class="absolute w-full -bottom-3rem right-3/5 opacity-25 h-200px bg-dotted from-gray-300"></div>
+			<div class="absolute w-full -bottom-3rem right-3/5 opacity-25 h-200px bg-dotted from-gray-300 -z-50"></div>
 		</div>
-		<div class="flex flex-col gap-4 text-gray-300">
-			<p>I'm Andika Nur Pratama, a JavaScript enthusiast from East Java, Indonesia.</p>
-			<p>
-				I began my journey from 2019 in third class of my vacational school. Now i majoring in Computer Sience at <a
+		<div class="flex flex-col gap-4 text-gray-300 relative">
+			<p class="x-about inline-block">
+				Hello, I'm Andika Nur Pratama from East Java, <span
+					class="hover:(bg-gradient-to-t from-white-50% via-white via-50% to-red-500 to-50% text-black) will-move">Indonesia</span
+				>.
+			</p>
+			<p class="x-about inline-block">
+				My journey began in 2019 during vacational school, and now i majoring in Computer Sience at <a
 					href="https://umpo.ac.id/"
 					class="hover:text-green underline transition-all duration-500 ease-in-out">Muhammadiyah University of Ponorogo</a
-				> and i had a lot of experience in there.
+				>.
 			</p>
-			<>
-				I chose JavaScript as my main programming language because it's easy to learn and i can use it everywhere. but i also learn other
-				programming language like PHP, Python, Rust, and C++.
-			</>
+			<p class="x-about inline-block">
+				JavaScript is my primary language, but I'm also exploring PHP, Python, Rust, and C++. Beyond web development, I love tackling new
+				challenges and expanding my knowledge.
+			</p>
 		</div>
 	</div>
 </section>
