--- a/src/features/home/index.astro
+++ b/src/features/home/index.astro
@@ -6,8 +6,8 @@ import About from "./components/About.astro";
 
 <div class="relative w-full h-screen overflow-hidden">
 	<div id="fullpage" class="w-full relative ease-in-out-quart">
-		<!-- <Hero /> -->
-		<!-- <About /> -->
+		<Hero />
+		<About />
 		<Skills />
 	</div>
 </div>
