--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
     <BaseHead title={title} />
   </head>
   <body class="bg-primary h-screen font-sans overflow-x-hidden">
-    <!-- <BaseNavbar /> -->
+    <BaseNavbar />
     <slot />
     <!-- <Footer /> -->
   </body>
