--- a/src/components/BaseNavbar.astro
+++ b/src/components/BaseNavbar.astro
@@ -1,6 +1,6 @@
-
-<nav>
-    <a href="#">Home</a>
-    <a href="#">Posts</a>
-    <a href="#">Contact</a>
-</nav>
+<header class="fixed top-0 left-0 w-full text-white z-999 p-4 flex items-center justify-between">
+	<span class="text-xl font-black tracking-widest">
+		<span class="i-charm-gamepad bg-white"></span> ANDKA
+	</span>
+    <a href="mailto:hy@andka.me" class="px-4 py-1 transition-all duration-500 ease-in hover:(text-black bg-green border-transparent) border-2 border-white rounded-xl">Contact</a>
+</header>
