--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,26 +1,26 @@
 ---
-
 import BaseHead from "@/components/BaseHead.astro";
 import Footer from "@/components/Footer.astro";
 import BaseNavbar from "@/components/BaseNavbar.astro";
 
 export interface Props {
-  title: string;
+	title: string;
 }
 
 const { title } = Astro.props;
 ---
 
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <BaseHead title={title} />
-  </head>
-  <body class="bg-primary h-screen font-sans overflow-x-hidden">
-    <BaseNavbar />
-    <slot />
-    <!-- <Footer /> -->
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<BaseHead title={title} />
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
+	</head>
+	<body class="bg-#020204 min-h-screen font-sans">
+		<BaseNavbar />
+		<slot />
+		<!-- <Footer /> -->
+	</body>
 </html>
-
