--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,10 +2,12 @@
 import Layout from "@/layouts/BaseLayout.astro";
 import Hero from "@/components/home/Hero.astro";
 import Expertise from "@/components/home/Expertise.astro";
+import Intro from "@/components/home/Intro.astro";
 ---
 
 <Layout title="Andka">
 	<Hero />
 	<Expertise />
+	<Intro />
 </Layout>
 
