--- a/src/components/home/Expertise.astro
+++ b/src/components/home/Expertise.astro
@@ -3,7 +3,7 @@ const expertise = [
 	{
 		icon: "i-clarity-world-line",
 		title: "Web Development",
-		description: "Passionate about building web applications with modern technologies.",
+		description: "Passionate about building web apps with modern technologies.",
 	},
 	{
 		icon: "i-clarity-cpu-line",
@@ -18,21 +18,46 @@ const expertise = [
 ];
 ---
 
-<div class="w-full py-32 flex items-center justify-center text-white flex-col gap-16">
-	<div class="border-2px border-#fff2 bg-#ffffff08 relative rounded-3xl p-1 grid grid-cols-3 max-w-6xl backdrop-blur-md">
+<div class="w-full py-32 flex items-center justify-center flex-col gap-16" x-data="{i: 0}">
+	<div class="border-1 border-#fff2 bg-#ffffff08 relative rounded-3xl p-2px grid grid-cols-3 max-w-6xl backdrop-blur-xl">
 		{
 			expertise.map((el, index) => (
-				<div class="py-12 px-8">
-					<div class="flex gap-6">
-						<div class="col-span-1">
-							<span class={`h-8 w-8 bg-white ${el.icon}`} />
+				<div class="py-8 px-12" x-on:mouseenter={`i= ${index}`}>
+					<div class="flex gap-6 w-full ">
+						<div class="flex gap-4 items-center w-full">
+							<span class={`h-12 w-12 bg-white ${el.icon}`} />
+							<div class="flex items-center w-full opacity-50">
+								<div class="w-2 h-2 bg-white rounded-full" />
+								<div class="w-full h-1px bg-gradient-to-r from-white to-transparent" />
+							</div>
 						</div>
 						<div class="font-bold text-2xl" />
 					</div>
-					<h1 class="text-xl my-5">{el.title}</h1>
+					<h1 class="text-xl my-3">{el.title}</h1>
 					<h3 class="opacity-75 font-300">{el.description}</h3>
 				</div>
 			))
 		}
+
+		<div
+			class="absolute top-0px left-0px w-[calc(33.3333%_-_4px)] h-[calc(100%_-_12px)] m-6px rounded-2xl border-1px backdrop-blur-3xl -z-1 border-#fff1 transition-all duration-500 ease-in-out box-border"
+			:style="{ transform: `translateX(${i * 100}%)` }">
+		</div>
+		<div class="absolute -top-10 -left-20 blur-3xl -z-50">
+			<div class="w-20 h-20 bg-red" />
+			<div class="w-30 h-5 bg-sky -my-5" />
+			<div class="w-30 h-20 bg-purple -my-5" />
+			<div class="w-30 h-20 bg-purple-7 mx-7 -my-5" />
+		</div>
+		<div class="absolute -bottom-10 -right-50 flex blur-3xl gap-8 flex-col  -z-50">
+			<div class="w-20 h-20 bg-red" />
+			<div class="w-30 h-5 bg-sky -my-5 mx-10" />
+			<div class="w-30 h-20 bg-purple -my-5" />
+			<div class="w-30 h-20 bg-purple-7 mx-20 -my-5" />
+		</div>
+		<div class="absolute bottom-10 right-1/3 flex blur-3xl gap-8 flex-col  -z-50">
+			<div class="w-30 h-5 bg-sky -my-5 mx-10" />
+			<div class="w-30 h-20 bg-purple-7 mx-20 -my-5" />
+		</div>
 	</div>
 </div>
