--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -8,7 +8,7 @@
 	</canvas>
 
 	<div class="z-90 flex flex-col gap-12 text-center items-center justify-center text-white">
-		<h1 class="text-8xl font-black text-white">Enthusiastic developer</h1>
+		<h1 class="text-8xl font-heading font-black text-white">Enthusiastic developer</h1>
 		<p class="max-w-4xl font-300 font-sans opacity-70 text-xl tracking-wide leading-relaxed">
 			The main parts of what I do are building the internet, solving problems, exploring new technologies and learning new wonderfull things.
 		</p>
@@ -24,8 +24,8 @@
 
 <script>
 window.onload = () => {
-    const canvas = document.getElementById("herocanvas");
-    const ctx = canvas.getContext("2d", { alpha: true });
+    const canvas = document.getElementById("herocanvas") as HTMLCanvasElement;
+    const ctx = canvas.getContext("2d", { alpha: true })!;
 
     const radius = 700;
     const width = radius * 2.5;
@@ -42,13 +42,34 @@ window.onload = () => {
     canvas.height = canvas.height = height;
 
     class Particle {
-        constructor(isRandomRadius) {
+        radius: number;
+        time: number;
+        speed: number;
+        hue: number;
+        u: number;
+        v: number;
+        θ: number;
+        φ: number;
+        x: number;
+        y: number;
+        z: number;
+        size: number;
+
+
+        constructor(isRandomRadius: boolean) {
             this.radius = isRandomRadius ? Math.random() * radius : radius;
             this.time = 0;
             this.speed = isRandomRadius ? Math.random() / 200 : defaultPartSpeed;
             this.hue = 220 + 100 * Math.random();
             this.u = Math.random();
             this.v = Math.random();
+            this.θ = 0;
+            this.φ = 0;
+            this.x = 0;
+            this.y = 0;
+            this.z = 0;
+            this.size = 0;
+
             this.updatePosition();
         }
 
@@ -66,7 +87,7 @@ window.onload = () => {
             this.size = (this.radius * 1.4 - this.z) / 25;
         }
 
-        getColor(ctx) {
+        getColor(ctx: CanvasRenderingContext2D) {
             const x = this.x + hWidth;
             const y = this.y + hHeight;
 
@@ -79,7 +100,7 @@ window.onload = () => {
             return gradient;
         }
 
-        render(ctx) {
+        render(ctx: CanvasRenderingContext2D) {
             const hSize = this.size / 2;
 
             ctx.fillStyle = this.getColor(ctx);
