--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,7 +18,7 @@ const { title } = Astro.props;
 		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 		<script defer src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>
 	</head>
-	<body class="bg-#020204 min-h-screen font-sans">
+	<body class="bg-#020204 min-h-screen font-sans text-#ddd">
 		<BaseNavbar />
 		<slot />
 		<!-- <Footer /> -->
